@@ -1,5 +1,13 @@
 Unreleased
 
+ * Added selection functionality, and adjusted key bindings:
+    - C-t or Insert toggle whether the current item is selected;
+    - + and - adjust the selection using shell globs;
+    - t and T insert the selection into the external command line
+      in relative or absolute form, respectively;
+	- Enter is like t but enters directories, and M-Enter is synonymous to t;
+    - C-g or Escape clear the selection, similarly to the editor.
+
  * Added an sdn-view script that can process Midnight Commander mc.ext.ini files
    and apply matching filters; this script has been made the default F3 binding,
    while the original direct pager invocation has been moved to F13 (which also
